# times-sync-bot

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: args.rs  event.rs  main.rs  permalink.rs
