[package]
name = "times-sync-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.20"
serenity = { version = "0.11.7", default-features = false, features = ["cache", "gateway", "rustls_backend", "http", "builder", "client", "model"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
