[package]
name = "times-sync-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
fern = { version = "0.7.0", features = ["colored"] }
log = "0.4.21"
serenity = { version = "0.12.1", default-features = false, features = ["cache", "gateway", "rustls_backend", "http", "builder", "client", "model"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
